--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
+buildscript {
+	ext {
+		springBootVersion = '2.2.6.RELEASE'
+        droolsVersion = '7.22.0.Final'
+	}
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    }
+}
+
 plugins {
-	id 'org.springframework.boot' version '2.2.6.RELEASE'
+	id 'org.springframework.boot' version "${springBootVersion}"
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'eclipse'
 	id 'java'
 	id 'groovy'
 }
@@ -15,23 +29,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+	
+    implementation "org.kie:kie-spring:${droolsVersion}"
+    implementation "org.drools:drools-compiler:${droolsVersion}"
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-}
-
-sourceSets {
-    main {
-        java.srcDirs   = ['src/main/java']
-        groovy.srcDirs = ['src/main/groovy']
-    }
-    test {
-        java.srcDirs   = ['src/test/java']
-        groovy.srcDirs = ['src/test/groovy']
-    }
 }
 
 test {
