start botw project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
-info.app.name=Drools Experiment API
-info.app.description=Screwing around with Drools
+info.app.name=BotW Recipe API
+info.app.description=An API to mimic BotW's recipe system
 info.app.version=1.0.0
 
 server.port=8098
+
+# H2 database for POC
+spring.datasource.url=jdbc:h2:file:/data/demo
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Configure H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
