--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies{
 	implementation "org.springframework.boot:spring-boot-starter:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
 	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+
+    implementation 'com.h2database:h2'
 	
     implementation "org.kie:kie-spring:${droolsVersion}"
     implementation "org.drools:drools-compiler:${droolsVersion}"
