--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ info.app.version=1.0.0
 server.port=8098
 
 # H2 database for POC
-spring.datasource.url=jdbc:h2:file:/data/demo
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+#spring.datasource.url=jdbc:h2:file:/data/demo
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Configure H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
