--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-info.app.name=BotW Recipe API
-info.app.description=An API to mimic BotW's recipe system
+info.app.name=Vehicle Premium API
+info.app.description=Use drools to evaluate vehicle premium
 info.app.version=1.0.0
 
 server.port=8098
